syntax = "proto3";

package proto;

import "google/protobuf/any.proto";

service IMage {
  rpc TransformImage(stream TransformImageRequest) returns (stream TransformedImage);
  rpc Healthcheck(HealthcheckRequest) returns (HealthcheckStatus);
  rpc GetNewToken(NewTokenRquest) returns (NewTokenResponse);
}

message NewTokenResponse {
  string label = 1;
  string value = 2;
}

message NewTokenRquest {
  string label = 1;
}

message HealthcheckRequest {}

message HealthcheckStatus {
  bool store = 1;
}

message Image {
  int64 size = 1;
  string format = 2;
  bytes file = 3;
}

message TransformedImage {
  bytes file = 1;
}

enum TransformationType {
  ROTATE = 0;
  CROP = 1;
  BLUR = 2;
  RESIZE = 3;
}

message TransformImageRequest {
  TransformationType type = 1;
  google.protobuf.Any data = 2;
  Image image = 3;
}

message RotateImageRequest {
  float angle = 1;
  bool clockWise = 2;
}

message BlurImageRequest {
  float sigma = 1;
}

message ResizeImageRequest {
  int32 width = 1;
  int32 height = 2;
}

message CropImageRequest {
  int32 topLeftX = 1;
  int32 topLeftY = 2;
  int32 width = 3;
  int32 height = 4;
}

message NewTokenRequest {
  string label = 1;
}

message DeleteTokenRequest {
  string label = 1;
}
